testsuite/tests/typecheck/should_fail/T11464.hs
{-# LANGUAGE MagicHash, PolyKinds #-}

module Foo where

instance Eq (Either a)
